SAK-25365 - applied patch email_archive_count_xml.diff
git-svn-id: https://source.sakaiproject.org/svn/mailarchive/trunk@131929 66ffb92e-73f9-0310-93c1-f5514f145a0a